--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,8 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/home.js"></script>
     <script src="scripts/controllers/keymovement.js"></script>
+    <script src="scripts/controllers/text.js"></script>
+    <script src="scripts/controllers/domelements.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
